src/test/ui/did_you_mean/issue-34126.nll.stderr
error[E0502]: cannot borrow `self` as mutable because it is also borrowed as immutable
  --> $DIR/issue-34126.rs:16:18
   |
LL |         self.run(&mut self); //~ ERROR cannot borrow
   |         ---------^^^^^^^^^-
   |         |        |
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here
   |         borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
